  class to be used without having to subclass.

- Issue #7588: ``unittest.TextTestResult.getDescription`` now includes the test
  name in failure reports even if the test has a docstring.

- Issue #5801: removed spurious empty lines in wsgiref.

- Issue #1537721: Add a writeheader() method to csv.DictWriter.

- Issue #7427: improve the representation of httplib.BadStatusLine exceptions.

Extension Modules
-----------------

- Issue #6544: fix a reference leak in the kqueue implementation's error
  handling.

- Stop providing crtassem.h symbols when compiling with Visual Studio 2010, as
  msvcr100.dll is not a platform assembly anymore.

Tests
-----

- Issue #6292: for the moment at least, the test suite runs cleanly if python
  is run with the -OO flag.  Tests requiring docstrings are skipped.

- Issue #7712: test_support gained a new `temp_cwd` context manager which is
  now also used by regrtest to run all the tests in a temporary directory.
  The original CWD is saved in `test_support.SAVEDCWD`.
  Thanks to Florent Xicluna who helped with the patch.

Build
-----

- Issue #3920, #7903: Define _BSD_SOURCE on OpenBSD 4.4 through 4.9.


What's New in Python 2.7 alpha 3?
=================================

*Release date: 2010-02-06*

Core and Builtins
-----------------

- Issue #5677: Explicitly forbid write operations on read-only file objects,
  and read operations on write-only file objects.  On Windows, the system C
  library would return a bogus result; on Solaris, it was possible to crash
  the interpreter.  Patch by Stefan Krah.

- Issue #7853: Normalize exceptions before they are passed to a context
  managers __exit__ method.

- Issue #7385: Fix a crash in `MemoryView_FromObject` when
  `PyObject_GetBuffer` fails.  Patch by Florent Xicluna.

- Issue #7819: Check sys.call_tracing() arguments types.

- Issue #7788: Fix an interpreter crash produced by deleting a list
  slice with very large step value.
